fix table scroll on mobile

--- a/styles/DirectoryIndex.scss
+++ b/styles/DirectoryIndex.scss
@@ -1,6 +1,6 @@
 @import '../node_modules/material-colors/dist/colors.scss';
 
-#contents {
+ul.DirectoryIndex {
   padding-left: 0;
   list-style-type: none;
   font-size: 1.1em;
